Started on dashboard

--- a/web/base.css
+++ b/web/base.css
@@ -1,30 +1,28 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 :root {
-	/* Dark Mode */
-	--colour-text: #dde;
-	--colour-block: #000;
-	--colour-accent: #2f7cee;
+  /* Dark Mode */
+  --colour-text: #dde;
+  --colour-block: #000;
+  --colour-accent: #2f7cee;
 }
 
-@media print,
-(prefers-color-scheme: light) {
-	:root {
-		/* Light Mode */
-		--colour-text: #000;
-		--colour-block: #eee;
-		--colour-accent: #2f7cee;
-	}
+@media print, (prefers-color-scheme: light) {
+  :root {
+    /* Light Mode */
+    --colour-text: #000;
+    --colour-block: #eee;
+    --colour-accent: #2f7cee;
+  }
 }
-
-
 
 body {
-	color: var(--colour-text);
-	background-color: var(--colour-block);
+  color: var(--colour-text);
+  background-color: var(--colour-block);
 
-	text-align: center;
-
+  text-align: center;
 }
 
 h1 {
-	color: var(--colour-accent);
+  color: var(--colour-accent);
 }
