--- a/web/base.css
+++ b/web/base.css
@@ -13,6 +13,8 @@
     --colour-text: #000;
     --colour-block: #eee;
     --colour-accent: #2f7cee;
+
+    font-family: "Roboto", sans-serif;
   }
 }
 
