--- a/web/dashboard/style.css
+++ b/web/dashboard/style.css
@@ -11,6 +11,12 @@
   color: var(--colour-white);
 }
 
+.myprojects-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .progress-bar {
   width: 100%;
   height: 0.8rem;
@@ -20,4 +26,15 @@
 .progress-bar-fill {
   height: 100%;
   background-color: var(--colour-accent);
+}
+
+.link-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-weight: 600;
+}
+
+.link-list a {
+  color: var(--colour-accent);
 }
