Added side menu to dashboard

--- a/web/base.css
+++ b/web/base.css
@@ -45,10 +45,17 @@ header.header {
 }
 
 .mobile-nav-toggle {
+  display: inline-block;
   background-color: transparent;
   color: var(--colour-accent);
   border: none;
   font-size: 2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-nav-toggle {
+    display: none;
+  }
 }
 
 /* CARDS */
