--- a/web/dashboard/style.css
+++ b/web/dashboard/style.css
@@ -38,3 +38,54 @@
 .link-list a {
   color: var(--colour-accent);
 }
+
+/* SIDE MENU */
+main {
+  margin: 0;
+}
+
+.side-menu {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  :root {
+    --side-menu-width: 5rem;
+  }
+  .side-menu {
+    display: block;
+    position: fixed;
+    height: 100%;
+    width: var(--side-menu-width);
+    background-color: var(--colour-accent);
+  }
+
+  .side-menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  .side-menu li {
+    width: 2.5rem;
+    aspect-ratio: 1;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .side-menu li a {
+    color: var(--colour-text);
+    text-decoration: none;
+  }
+  .side-menu li[data-active] {
+    background-color: var(--colour-white);
+    border-radius: 0.4rem;
+  }
+  .side-menu li[data-active] a {
+    color: var(--colour-accent);
+  }
+
+  main {
+    margin-left: var(--side-menu-width);
+  }
+}
