--- a/web/dashboard/style.css
+++ b/web/dashboard/style.css
@@ -47,7 +47,7 @@ main {
 .side-menu {
   display: none;
 }
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
   :root {
     --side-menu-width: 5rem;
   }
