moved colours from light mode to root. (changed colour-white to colour-highlight)

--- a/web/dashboard/style.css
+++ b/web/dashboard/style.css
@@ -8,7 +8,7 @@
   padding: 0;
   margin: 0 1rem;
   box-shadow: var(--card-shadow);
-  color: var(--colour-white);
+  color: var(--colour-highlight);
 }
 
 .myprojects-wrapper {
@@ -47,10 +47,12 @@ main {
 .side-menu {
   display: none;
 }
+
 @media (min-width: 768px) {
   :root {
     --side-menu-width: 5rem;
   }
+
   .side-menu {
     display: block;
     position: fixed;
@@ -64,6 +66,7 @@ main {
     margin: 0;
     padding: 0;
   }
+
   .side-menu li {
     width: 2.5rem;
     aspect-ratio: 1;
@@ -77,10 +80,12 @@ main {
     color: var(--colour-text);
     text-decoration: none;
   }
+
   .side-menu li[data-active] {
-    background-color: var(--colour-white);
+    background-color: var(--colour-highlight);
     border-radius: 0.4rem;
   }
+
   .side-menu li[data-active] a {
     color: var(--colour-accent);
   }
