--- a/web/base.css
+++ b/web/base.css
@@ -111,6 +111,7 @@ header.header {
   margin: 0;
 }
 
+/* TASKS */
 /* <hr> line break between todo items*/
 .item-break {
   border: 1px solid var(--colour-text);
@@ -118,6 +119,15 @@ header.header {
 
 input[type="checkbox"]:checked + label {
   text-decoration: line-through;
+}
+
+/* MODAL <dialog>s */
+.modal {
+  border: none;
+  background-color: var(--colour-white);
+  color: var(--colour-text);
+  box-shadow: var(--card-shadow);
+  border-radius: var(--card-radius);
 }
 
 /* UTILITY */
