--- a/web/dashboard/style.css
+++ b/web/dashboard/style.css
@@ -9,6 +9,15 @@
   margin: 0 1rem;
   box-shadow: var(--card-shadow);
   color: var(--colour-white);
+  cursor: pointer;
+  transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out;
+}
+
+.new-item:hover,
+.new-item:focus {
+  outline-offset: 0.3rem;
+  background-color: var(--colour-white);
+  color: var(--colour-accent);
 }
 
 .myprojects-wrapper {
