--- a/web/login/style.css
+++ b/web/login/style.css
@@ -22,6 +22,21 @@ h1{
   
   color: var(--colour-blue);
 }
+h1 span {
+    width: 224px;
+    height: 44px;
+    left: 36px;
+    top: 33px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18.75px;
+    line-height: 22px;
+    text-align: center;
+
+    color: var(--colour-black);
+}
 
 /*"Member Login" text CSS*/
 #member-login {
@@ -90,6 +105,8 @@ h1{
 #submit-button {
     box-sizing: border-box;
 
+    font-weight: bold;
+
     position: absolute;
     width: 258px;
     height: 38px;
@@ -98,5 +115,42 @@ h1{
 
     background: var(--colour-blue);
     border: 1px solid var(--colour-blue);
+    border-radius: 8px;
+}
+
+#no-account-text {
+    position: absolute;
+    width: 225px;
+    height: 30px;
+    left: calc(50% - 225px/2 + 5.5px);
+    top: 403px;
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+
+    color: var(--colour-black);
+}
+
+
+#register-button {
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 258px;
+    height: 38px;
+    left: calc(50% - 258px/2 + 6px);
+    top: 427px;
+
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+
+    background: var(--colour-white);
+    border: 1px solid var(--colour-white);
     border-radius: 8px;
 }
