Added titles, cleanup

--- a/web/base.css
+++ b/web/base.css
@@ -126,6 +126,12 @@ header.header {
   justify-content: space-around;
 }
 
+.kanban-section {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 /* TASKS */
 
 .task-list-item {
