--- a/web/base.css
+++ b/web/base.css
@@ -131,20 +131,35 @@ header.header {
 }
 
 .kanban-section {
+  flex-grow: 100;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1rem;
 }
 
-.kanban-section:nth-child(1) .card-small {
+.kanban-section .card-small {
+  width: 80%;
+  max-width: unset;
+}
+
+/* RAG colours */
+.kanban-section:nth-of-type(1) .card-small {
   background-color: var(--colour-red);
 }
-.kanban-section:nth-child(2) .card-small {
+.kanban-section:nth-of-type(2) .card-small {
   background-color: var(--colour-amber);
 }
-.kanban-section:nth-child(3) .card-small {
+.kanban-section:nth-of-type(3) .card-small {
   background-color: var(--colour-green);
 }
+.kanban-wrapper hr {
+  border: 2px solid var(--colour-text);
+}
+
+/* .kanban-section + .kanban-section {
+  border-left: 0.2rem solid var(--colour-text);
+} */
 
 /* TASKS */
 
