--- a/web/project/style.css
+++ b/web/project/style.css
@@ -1,11 +1,82 @@
 .topcards-wrapper {
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: space-around; */
 }
 
 .div-center {
   margin: auto;
+}
+
+.small-cards-wrapper-center {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.flex-col-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.deadline-date-day {
+  font-size: 3em;
+  font-weight: 800;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+}
+
+.deadline-date-monthyear {
+  font-size: 1.5em;
+  font-weight: 600;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+.PM-name {
+  font-size: 1.5em;
+  font-weight: 600;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+.PM-image {
+  aspect-ratio: 1;
+  border-radius: 100vh;
+  width: 8rem;
+  height: 8rem;
+}
+
+/* Header bar */
+.header {
+  padding-block: 0.5rem;
+}
+
+.account-info {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .account-info {
+    display: flex;
+    gap: 1rem;
+    margin-inline: 4rem;
+  }
+  .account-info h6 {
+    font-size: 1.2em;
+  }
+  .account-info * {
+    margin: 0;
+  }
+  .account-info .flex-col {
+    align-items: flex-end;
+  }
+
+  .account-info img {
+    aspect-ratio: 1;
+    border-radius: 100vh;
+  }
 }
 
 .new-item {
@@ -21,30 +92,6 @@
   color: var(--colour-highlight);
   cursor: pointer;
   transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out;
-}
-
-.new-item:hover,
-.new-item:focus {
-  outline-offset: 0.3rem;
-  background-color: var(--colour-highlight);
-  color: var(--colour-accent);
-}
-
-.myprojects-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.progress-bar {
-  width: 100%;
-  height: 0.8rem;
-  background-color: var(--colour-mid-grey);
-}
-
-.progress-bar-fill {
-  height: 100%;
-  background-color: var(--colour-accent);
 }
 
 .link-list {
