--- a/web/base.css
+++ b/web/base.css
@@ -147,15 +147,19 @@ header.header {
   cursor: pointer;
 }
 
+/* kanban card top border colour (if not overwritten, defaults to colour-accent) */
+.kanban-section .card-small {
+  border-top: 0.25rem solid var(--colour-card-highlight, var(--colour-accent));
+}
 /* RAG colours */
 .kanban-section:nth-of-type(1) .card-small {
-  background-color: var(--colour-red);
+  --colour-card-highlight: var(--colour-red);
 }
 .kanban-section:nth-of-type(2) .card-small {
-  background-color: var(--colour-amber);
+  --colour-card-highlight: var(--colour-amber);
 }
 .kanban-section:nth-of-type(3) .card-small {
-  background-color: var(--colour-green);
+  --colour-card-highlight: var(--colour-green);
 }
 .kanban-wrapper hr {
   border: 2px solid var(--colour-text);
