--- a/web/dashboard/style.css
+++ b/web/dashboard/style.css
@@ -35,7 +35,7 @@
 
 .progress-bar-fill {
   height: 100%;
-  background-color: var(--colour-accent);
+  background-color: var(--bar-fill, var(--colour-accent));
 }
 
 .link-list {
