Added 'My Teams' card to dashboard

--- a/web/dashboard/style.css
+++ b/web/dashboard/style.css
@@ -45,8 +45,9 @@
   font-weight: 600;
 }
 
-.link-list a {
-  color: var(--colour-accent);
+.link-list a,
+.fg-accent {
+  color: var(--colour-accent) !important;
 }
 
 /* Header bar */
