--- a/web/base.css
+++ b/web/base.css
@@ -119,6 +119,10 @@ header.header {
   box-shadow: var(--card-shadow);
 }
 
+.accent-outline {
+  border: 0.3rem solid var(--colour-accent);
+}
+
 .title-card-small {
   margin: 0;
 }
