--- a/web/base.css
+++ b/web/base.css
@@ -6,8 +6,8 @@
 
   --colour-text: #dde;
   --colour-block: #080808;
-  --colour-accent: #2f7cee;
-  --colour-accent-trans: #2f7bee69;
+  --colour-accent: #ffb53c;
+  --colour-accent-trans: #f8d9a82a;
   --colour-highlight: #1d1d1d;
 
   --colour-mid-grey: #a6acbe;
@@ -25,14 +25,13 @@
   --card-small-radius: 14px;
 }
 
-@media print,
-(prefers-color-scheme: light) {
+@media print, (prefers-color-scheme: light) {
   :root {
     /* Light Mode Overrides*/
     --colour-text: #000;
     --colour-block: #eee;
-    --colour-accent: #2f7cee;
-    --colour-accent-trans: #2f7cee0d;
+    /* --colour-accent: #2f7cee; */
+    --colour-accent-trans: #fff9bf62;
     --colour-highlight: #fff;
 
     --colour-mid-grey: #a6acbe;
@@ -200,7 +199,7 @@ header.header {
   border: 1px solid var(--colour-text);
 }
 
-input[type="checkbox"]:checked+label {
+input[type="checkbox"]:checked + label {
   text-decoration: line-through;
 }
 
