--- a/web/project/css-circular-prog-bar.css
+++ b/web/project/css-circular-prog-bar.css
@@ -5,7 +5,7 @@
    padding: 0;
    width: 8em; /* 5 */
    height: 8em; /* 5 */
-   background-color: #F2E9E1; 
+   background-color: var(--colour-mid-grey); 
    border-radius: 50%;
    line-height: 8em;
 }
@@ -20,7 +20,7 @@
     border-radius: 50%;
     width: 7.3em; /* 4.3 */
     height: 7.3em; /* 4.3 */
-    background-color: white;
+    background-color: var(--colour-highlight);
     content: " ";
 }
 /* Text inside the control */
@@ -30,7 +30,7 @@
     width: 4.4em; /* 5 */
     text-align: center;
     display: block;
-    color: #53777A;
+    color: var(--colour-text);
     z-index: 2;
     font-size: 2em;
 }
@@ -55,7 +55,7 @@
    width: 8em; /* 5 */
    height: 8em; /* 5 */
    border-radius: 50%;
-   border: 0.45em solid #53777A; /*The border is 0.35 but making it larger removes visual artifacts */
+   border: 0.45em solid var(--colour-accent); /*The border is 0.35 but making it larger removes visual artifacts */
    /*background-color: #4D642D;*/ /* for debug */
    box-sizing: border-box;
   
@@ -65,7 +65,7 @@
    /*Progress bar for the first 50%, filling the whole right half*/
    position: absolute; /*needed for clipping*/
    clip: rect(0, 8em, 8em, 4em); /* 0,5em,5em,2.5 */
-   background-color: #53777A;
+   background-color: var(--colour-accent);
    border-radius: 50%;
    width: 8em; /* 5 */
    height: 8em; /* 5 */
