--- a/web/base.css
+++ b/web/base.css
@@ -292,42 +292,14 @@ input[type="checkbox"]:checked + label {
 
 #waves {
   position: absolute;
-  width: 99.7%;
-  height: 99.7%;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   left: 0px;
   top: 0px;
   background: var(--colour-block);
-  /*cannot find the background colour of the website, just need to change this to the same colour as the background*/
-  border: 1px solid var(--colour-highlight);
+  border: 1px solid var(--colour-block);
   backdrop-filter: blur(2px);
   z-index: -1;
 }
 
-/* LOGIN */
-
-/*Login box in centre of page*/
-.box {
-  box-sizing: border-box;
-
-  position: absolute;
-  width: 349px;
-  height: 518px;
-  left: calc(50% - 349px / 2 + 3.5px);
-  top: 189px;
-  align-items: center;
-
-  background: var(--colour-white);
-  border: 1px solid var(--colour-white);
-  box-shadow: 0px 4px 4px var(--colour-black);
-  border-radius: 42px;
-}
-
-/*ICON (screwdriver) with positioning which hopefully can be used across multiple pages*/
-
-.icon {
-  position: absolute;
-  width: 47px;
-  height: 47px;
-  left: 338px;
-  top: 32px;
-}
