create new task close dialog button

--- a/web/base.css
+++ b/web/base.css
@@ -295,6 +295,7 @@ input[type="checkbox"]:checked + label {
   justify-content: flex-end;
 }
 
+  position: absolute;
 /* UTILITY */
 
 .bg-accent {
