--- a/web/base.css
+++ b/web/base.css
@@ -220,6 +220,16 @@ header.header {
   background-color: var(--colour-accent);
 }
 
+div:has(.click-expander:focus) > .expand-content {
+  max-height: 3rem;
+}
+
+.expand-content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.1s ease-out;
+}
+
 /* .kanban-section + .kanban-section {
   border-left: 0.2rem solid var(--colour-text);
 } */
