--- a/web/project/style.css
+++ b/web/project/style.css
@@ -46,10 +46,21 @@
 .deadline-date {
   font-size: 3em;
   font-weight: 500;
-  margin: 1rem 2rem 0rem 2rem;
+  margin: 3rem auto; /* top right bottom left */
+  margin-bottom: 0;
   text-align: center;
   /* margin-top: 3rem;
   margin-bottom: 1rem; */
+}
+
+.deadline-days-left {
+  font-size: 1.25rem;
+  font-weight: 300;
+  margin: 1rem auto; /* top right bottom left */
+  text-align: center;
+  color: var(--colour-red);
+  /* margin-top: 1rem;
+  margin-bottom: 3rem; */
 }
 
 .card-small-text {
